<?xml version="1.0"?>
<package format="2">
  <name>yuv_parser</name>
  <version>1.0.0</version>
  <description>
    YUV parser package for publishing YUV frames and IMU data to ROS topics
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
